--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 AddDefaultCharset utf-8
 RewriteEngine On
-RewriteRule ^(.*)$ /public/index.php?$1
+#RewriteRule ^(.*)$ /public/index.php?$1
+RewriteRule ^(.*)$ /public/index.php/$1
